src/network_policies/authorizationmandatory1 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authorizationmandatory1
  namespace: fluidos
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: resource_monitor
    ports:
    - port: 43
      protocol: TCP
